# UnvFileReader

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: MacOS.yml  Test.yml  Ubuntu.yml  Windows.yml
application/: main.cpp
include/UnvFileReader/: UnvFileReader.cpp  UnvFileReader.h
test/: StructuredRectangularGridTest.cpp  UnstructuredRectangularGridTest.cpp
test/files/Structured/: Rectangular2d.hdf  RectangularGrid.unv
test/files/Unstructured/: Rectangular2d.hdf  RectangularGrid.unv
